js/js.translator/testData/incremental/invalidation/openClassWithInternalField/lib1/l1.3.kt
fun testProp(a: A): Int {
    return a.prop
}

fun testFunc(a: A): Int {
    return a.func()
}
